# web_module7

./: cleaner.py  main.py  my_select.py  pyproject.toml  seed.py
alembic/versions/: 1abc1bb63e84_crate_table_students.py  8de65e3d4287_create_table_grades.py  bf94b03a5fb0_crate_table_subjects.py  f5030de08cdb_crate_table_groups.py
